<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fisrtConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/img"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/maths">

        </ImageView>

        <Button
            android:id="@+id/btnStart"
            android:layout_width="168dp"
            android:layout_height="80dp"
            android:onClick="OnStartClick"
            android:text="@string/start"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img"
            app:layout_constraintVertical_bias="0.507">

        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secondConstraintLayout"
        android:layout_width="412dp"
        android:layout_height="734dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible">

        <TextView
            android:id="@+id/timer"
            android:layout_width="122dp"
            android:layout_height="72dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="49dp"
            android:padding="0.2dp"
            android:text="@string/_30s"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/question"
            android:layout_width="184dp"
            android:layout_height="72dp"
            android:layout_marginStart="114dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="110dp"
            android:text="@string/_14_18"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/score"
            android:layout_width="122dp"
            android:layout_height="0dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="112dp"
            android:text="@string/_0_0"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/result"
            android:layout_width="139dp"
            android:layout_height="48dp"
            android:layout_marginStart="125dp"
            android:layout_marginEnd="144dp"
            android:layout_marginBottom="126dp"
            android:text="@string/correct"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/playagain"
            android:layout_width="141dp"
            android:layout_height="59dp"
            android:layout_marginStart="124dp"
            android:layout_marginEnd="143dp"
            android:layout_marginBottom="42dp"
            android:backgroundTint="#00BCD4"
            android:onClick="OnClickPlayAgain"
            android:text="@string/play_again"
            android:textAlignment="center"
            android:textColor="#455A64"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="invisible" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="371dp"
            android:layout_height="246dp"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="79dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/firstBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#2196F3"
                    android:onClick="OnOptionClick"
                    android:tag="0"
                    android:text="@string/_15"
                    android:textSize="34sp"
                    android:textStyle="bold">

                </Button>

                <Button
                    android:id="@+id/secondBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FF5722"
                    android:onClick="OnOptionClick"
                    android:tag="1"
                    android:text="@string/_15"
                    android:textSize="34sp"
                    android:textStyle="bold"></Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/thirdBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FF9800"
                    android:onClick="OnOptionClick"
                    android:tag="2"
                    android:text="@string/_15"
                    android:textColor="#795548"
                    android:textSize="34sp"
                    android:textStyle="bold">

                </Button>

                <Button
                    android:id="@+id/fourthBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#E91E63"
                    android:onClick="OnOptionClick"
                    android:tag="3"
                    android:text="@string/_15"
                    android:textSize="34sp"
                    android:textStyle="bold">

                </Button>
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>